<resources>
    <string name="app_name">Tribial</string>
    <string name="tribial">TRIBIAL</string>
    <string name="app_logo">app_logo</string>
    <string name="welcome_message">Welcome to</string>
    <string name="tagline">An informative app about the Indigenous People of the Cordilleras</string>
    <string name="divider">divider</string>
    <string name="feature_header_1">Cordillera IP Groups</string>
    <string name="arrow_right">arrow_right</string>
    <string name="feature_header_2">Cordillera IP Archives</string>
    <string name="view_all_button">View All</string>
    <string name="bontoc">Bontoc</string>
    <string name="bontoc_desc">The Bontoc (or Bontok) ethnolinguistic group can be found in the central and eastern portions of Mountain Province, on the island of Luzon in the Philippines. Although some Bontocs of Natonin and Paracelis identify themselves as Balangaos, Gaddangs or Kalingas, the term \'Bontoc\' is used by linguists and anthropologists to distinguish speakers of the Bontoc language from neighboring ethnolinguistic groups.</string>
</resources>